--- a/Modules/Intro to SQL with Rugby by Izaan Khudadad/Intro to SQL.ipynb
+++ b/Modules/Intro to SQL with Rugby by Izaan Khudadad/Intro to SQL.ipynb
@@ -2,18 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4fd183af",
-   "metadata": {},
-   "source": [
-    "Schuckers Comments 7 July 25\n",
-    "+ Need an introduction to Rugby and something about its scoring.\n",
-    "+ Your first query is quite extensive, maybe start with a couple of simpler queries that only use a single keyword.\n",
-    "+ Also explain the text of the query and what is happening with the syntax: query = \"\"\" \"\"\"  pd.read_sql_query(query, conn)\n",
-    "+ In the Activity section, again start with a very simple query to build confidence, something like find all the matches played in 'Scotland', then build to more complicated queries"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "df88582d",
    "metadata": {},
    "source": [
@@ -103,7 +91,7 @@
     "### Learning Goals\n",
     "In this module, students will explore how to use SQL to analyze international rugby match data. By writing, executing, and interpreting SQL queries on this dataset, students will practice core data science skills such as:\n",
     "- Filtering data using `WHERE` clauses to focus on subsets of interest\n",
-    "- Computing summary statistics with `GROUP BY` and aggregate functions (e.g., `COUNT`, `AVG`)\n",
+    "- Computing summary statistics with `GROUP BY` and aggregate functions (e.g. `AVG`)\n",
     "- Sorting and ranking results to identify top teams, competitions, or scoring patterns\n",
     "- Extracting insights from dates and categorical variables\n",
     "- Developing familiarity with relational database tools like SQLite for data exploration"
@@ -131,8 +119,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8c16abde",
+   "metadata": {},
+   "source": [
+    "### What is rugby and how does the scoring work?\n",
+    "\n",
+    "Rugby is a team sport played with an oval ball that you can carry, pass, or kick.\n",
+    "Two teams of 15 players try to score by moving the ball down the field and grounding it in the opponent’s in-goal area (like an end zone), or by kicking it through goalposts.\n",
+    "\n",
+    "It’s a bit like a mix of soccer and American football, but with continuous play, fewer pads, and different rules for passing - the ball can only be passed backward or sideways, never forward by hand.\n",
+    "\n",
+    "- A try (touching the ball down in the opponent’s in-goal area) is worth 5 points.\n",
+    "- After a try, the team gets a chance for a conversion kick, which is worth 2 extra points if successful.\n",
+    "- A penalty kick (for certain fouls) and a drop goal (kicking the ball through the uprights during open play) are each worth 3 points."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d861b3a6",
    "metadata": {},
    "outputs": [
@@ -268,7 +273,7 @@
        "4   England        0          0  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,8 +353,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e0e320e6",
+   "metadata": {},
+   "source": [
+    "Notice that SQL is not directly written as any other code when combining it with python. The quotes are there because we’re writing a string of text (our SQL code) in Python. \n",
+    "- `query =` just saves that string so we can reuse it.\n",
+    "- `pd.read_sql_query(query, conn)` runs that SQL string on the database and gives us back a neat table we can use.\n",
+    "- you can use `--` inside the quotes to create comments for the SQL code"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9ba8d80f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>home_team</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Scotland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>England</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Scotland</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>England</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>England</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  home_team\n",
+       "0  Scotland\n",
+       "1   England\n",
+       "2  Scotland\n",
+       "3   England\n",
+       "4   England"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# List the home team of the first 5 matches in the dataset\n",
+    "query = \"\"\"\n",
+    "SELECT home_team\n",
+    "-- Choose which columns we want to see in our results\n",
+    "\n",
+    "FROM matches\n",
+    "-- Specify the table we want to pull data from\n",
+    "\n",
+    "LIMIT 5; \n",
+    "-- Only show the first 5 results so the output\n",
+    "\"\"\"\n",
+    "pd.read_sql_query(query, conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "4925a51b",
    "metadata": {},
    "outputs": [
@@ -374,76 +474,52 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>home_team</th>\n",
-       "      <th>away_team</th>\n",
        "      <th>home_score</th>\n",
-       "      <th>away_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1905-09-02</td>\n",
-       "      <td>New Zealand</td>\n",
-       "      <td>Australia</td>\n",
        "      <td>14</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1913-09-06</td>\n",
-       "      <td>New Zealand</td>\n",
-       "      <td>Australia</td>\n",
        "      <td>30</td>\n",
-       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1913-09-13</td>\n",
-       "      <td>New Zealand</td>\n",
-       "      <td>Australia</td>\n",
        "      <td>25</td>\n",
-       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1913-09-20</td>\n",
-       "      <td>New Zealand</td>\n",
-       "      <td>Australia</td>\n",
        "      <td>5</td>\n",
-       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1921-08-13</td>\n",
-       "      <td>New Zealand</td>\n",
-       "      <td>South Africa</td>\n",
        "      <td>13</td>\n",
-       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         date    home_team     away_team  home_score  away_score\n",
-       "0  1905-09-02  New Zealand     Australia          14           3\n",
-       "1  1913-09-06  New Zealand     Australia          30           5\n",
-       "2  1913-09-13  New Zealand     Australia          25          13\n",
-       "3  1913-09-20  New Zealand     Australia           5          16\n",
-       "4  1921-08-13  New Zealand  South Africa          13           5"
+       "   home_score\n",
+       "0          14\n",
+       "1          30\n",
+       "2          25\n",
+       "3           5\n",
+       "4          13"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Show all matches played by New Zealand as the home team\n",
+    "# Show the home scores of matches played by New Zealand as the home team\n",
     "query = \"\"\"\n",
-    "SELECT date, home_team, away_team, home_score, away_score\n",
+    "SELECT home_score\n",
     "-- Choose which columns we want to see in our results\n",
     "\n",
     "FROM matches\n",
@@ -456,6 +532,18 @@
     "-- Only show the first 5 results so the output stays small and easy to read\n",
     "\"\"\"\n",
     "pd.read_sql_query(query, conn)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64988a1a",
+   "metadata": {},
+   "source": [
+    "The keyword `DESC` is used to tell SQL to sort the results from highest to lowest, or from latest to earliest if it’s a date. \n",
+    "\n",
+    "You can create new columns by combing two different columns are assigning it to a new variable. For example `home_score + away_score AS total_points`, the columns home_score and away_score are being combined to create `total_points` by using the key word `AS`. \n",
+    "\n",
+    "There are a few rules, when trying to perform math operations, the involved columns must be a numeric data type. "
    ]
   },
   {
@@ -580,7 +668,7 @@
        "9  1997-11-08         Italy  South Africa            93"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,8 +693,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "392f00e3",
+   "metadata": {},
+   "source": [
+    "The `AVG()` function in SQL calculates the average (mean) value of a column across all the rows you’re looking at.\n",
+    "\n",
+    "- `AVG(home_score)` tells SQL to take all the `home_score` values in your data (or in each group if you’re using `GROUP BY`), add them up, and divide by the number of rows — just like calculating an average by hand.\n",
+    "- `AS avg_home_score` gives this result a name in your output table, so the new column will show up labeled as `avg_home_score`.  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "97f38fe1",
    "metadata": {},
    "outputs": [
@@ -704,7 +803,7 @@
        "9      Scotland       13.255072"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,8 +831,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77ff3558",
+   "metadata": {},
+   "source": [
+    "The `SELECT *` keyword will select every column in the table. \n",
+    "\n",
+    "You can use comparators such as `>`, `<`, `>=`, and `<=` with the `WHERE` keyword to filter out rows.   "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d515da21",
    "metadata": {},
    "outputs": [
@@ -869,7 +978,7 @@
        "4        0          0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +1009,7 @@
     "### Conclusion\n",
     "In the provided material, students explored how to use SQL to analyze international rugby match data. By writing, running, and interpreting SQL queries on a real sports dataset, students practiced core data science skills such as:\n",
     "- Filtering data using `WHERE` clauses to focus on specific subsets\n",
-    "- Computing summary statistics and aggregates with `GROUP BY` and functions like `AVG` and `COUNT`\n",
+    "- Computing summary statistics and aggregates with `GROUP BY` and functions like `AVG`\n",
     "- Sorting and ranking data using `ORDER BY` to identify patterns and top results\n",
     "- Using date filters to explore trends over time\n",
     "- Combining Python and SQL to perform efficient data wrangling inside a notebook\n"
@@ -915,19 +1024,17 @@
     "\n",
     "Using what you’ve learned, write and run SQL queries to answer these questions. Each can be answered by modifying the examples above.\n",
     "\n",
-    "1. **Which countries have hosted the most rugby matches?**  \n",
-    "   (Hint: `GROUP BY country`, `COUNT(*)`)\n",
+    "1. **1.List the away_team and home_score for matches that were played in Scotland. Limit to 10 matches**\n",
+    "   (Hint: country = \"Scotland\")  \n",
     "\n",
     "2. **What is the average total score (home + away) for matches in the World Cup?**  \n",
     "   (Hint: `WHERE world_cup = 1`, then `AVG(home_score + away_score)`)\n",
     "\n",
-    "3. **Which home team has the highest average winning margin?**  \n",
-    "   (Hint: create `home_score - away_score` as a new column and `AVG()` it)\n",
+    "3. **List the date, home_team, away_team, and total_points for matches played in France. Limit to 15 matches**\n",
+    "   (Hint: country = \"France\")\n",
     "\n",
-    "4. **List all matches played on neutral sites.**\n",
-    "\n",
-    "5. **Pick your favorite team:**  \n",
-    "   Write a query to list the last 5 matches they played, whether at home or away."
+    "4. **List all matches(date, home_team, away_team, home_score, away_score, country) played on neutral sites. Limit to 5**  \n",
+    "   (Hint: `WHERE neutral = 1`)"
    ]
   }
  ],
