Update to Seaborn Module

--- a/Modules/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes/Seaborn in Python Using English Premier League data by Austin Hayes.ipynb
+++ b/Modules/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes/Seaborn in Python Using English Premier League data by Austin Hayes.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "Schuckers Comments 7 July 2025\n",
-    "+ Is there a weak positive relationship between Assists and Crosses? - Done\n",
+    "+ Is there a weak positive relationship between Assists and Crosses?\n",
     "+ Usually, we use lineplots to look at data over time.  Not sure this is the best usage of that.  I'd drop it unless there is a time variable in the data - Done\n",
     "+ Maybe replace the above with a scatterplot of time vs minutes as another example of a scatterplot to describe.\n",
     "+ Maybe add a data glossary which is typical for a SCORE Module. For example, see the Variable descriptions for this module: https://iramler.github.io/slu_score_preprints/disc_golf/dgpt_correlations/ - Done\n",
