--- a/Modules/Intro to SQL with Rugby by Izaan Khudadad/Intro to SQL.ipynb
+++ b/Modules/Intro to SQL with Rugby by Izaan Khudadad/Intro to SQL.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f7318e7f",
+   "metadata": {},
+   "source": [
+    "14 July 2025 Schuckers Comments\n",
+    "Move learning goals to top of the module after title, author, categories.\n",
+    "The cell \"### What is SQL?\" needs to be moved down to go with the cell of code\n",
+    "The cell that starts \"# List the home team of the first 5 matches in the dataset\" give a bit more explanation about what you are doing with this cell of code.\n",
+    "Remove the \"hints\" from the last two tasks activities in the modules since at that point the users should be able to do those things themselves \n",
+    "(Optional) Maybe add a task where the user is asked to get and compare two averages, e.g. Average points scored by France in World Cup vs Average points for Australia. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "df88582d",
    "metadata": {},
    "source": [
