Finishing Seaborn Module

--- a/Modules/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes/Seaborn in Python Using English Premier League data by Austin Hayes.ipynb
+++ b/Modules/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes/Seaborn in Python Using English Premier League data by Austin Hayes.ipynb
@@ -884,9 +884,9 @@
    "source": [
     "Interesting, the Violinplot has an approximately normal distribution. Although the y-axis is not labeled, it is essentially a standardized scale that measures the density / amount of points in the graph at a given amount of shots on target.\n",
     "\n",
-    "Now, lets use a violin plot to compare Appearances among players with greater than 10 goals by position group.\n",
+    "Now, lets use a violin plot to compare the distribution(s) of player appearances by position group. We will also filter out the data to ONLY include players with more than 10 goals.\n",
     "\n",
-    "We can filter out the rows to only include players that meet any criteria we want. In this case, we are interested in seeing the distribution of player appereances by position group, ONLY including players with more than 10 goals. When we filter the data like this, it can drastically change the distribution of our data. If we include a broader amount of players, the IQR would shift towards the direction of the newly added data points.\n",
+    "NOTE: We can filter out the rows to only include players that meet any given criteria. In this case, we are interested in seeing the distribution of player appereances by position group, ONLY including players with more than 10 goals. When we filter the data like this, it can drastically change the distribution of our data. If we include a broader amount of players, the IQR would shift towards the direction of the newly added data points.\n",
     "\n",
     "Now, let's try it out!"
    ]
