Update to the Data Cleaning Module

--- a/Modules/Intro to Data Cleaning and Imputation by Austin Hayes/Intro to Data Cleaning and Imputation by Austin Hayes.ipynb
+++ b/Modules/Intro to Data Cleaning and Imputation by Austin Hayes/Intro to Data Cleaning and Imputation by Austin Hayes.ipynb
@@ -107,12 +107,32 @@
     "_Correct_: Fixing inconsistent data entrys such as misspelled items, inconceivable outliers and/or ilogical errors such as negative ages.\n",
     "\n",
     "\n",
-    "Let's break these down by diving into the football combine data! Let's get started by importing the neccesary librarys!"
+    "Let's break these down by diving into the football combine data!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f5180c0",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "# Getting Started\n",
+    "\n",
+    "Before we get started let's import pandas so we can read in our data.\n",
+    "\n",
+    "NOTE: If one of the import statements does not work, you may need to download the library(s). Visit one of the links below for more information on downloading them.\n",
+    "\n",
+    "Pandas: https://pandas.pydata.org/docs/getting_started/install.html \n",
+    "\n",
+    "Numpy: https://numpy.org/install/\n",
+    "\n",
+    "Now, lets import our libraries:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "866b9efd",
    "metadata": {},
    "outputs": [],
@@ -128,13 +148,263 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4cf58608",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read the in the NFL Combine data and store it in a DataFrame\n",
     "combine_data = pd.read_csv('https://raw.githubusercontent.com/schuckers/Charlotte_SCORE_Summer25/refs/heads/main/Data%20for%20Modules/Data%20for%20Intro%20to%20Data%20Cleaning%20and%20Imputation%20by%20Austin%20Hayes/nfl_combine.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a2f256b",
+   "metadata": {},
+   "source": [
+    "Let's examine the first 5 rows of data to get a better look at the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "31c1636d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "position",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Round",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "forty",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "vertical",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "bench_reps",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "broad_jump",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "three_cone",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "shuttle",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "a1ec8d92-3c59-46a7-9298-f0ea9f2f3cc8",
+       "rows": [
+        [
+         "0",
+         "QB",
+         null,
+         "4.79",
+         "30.5",
+         null,
+         "110.0",
+         "7.66",
+         "4.41"
+        ],
+        [
+         "1",
+         "RB",
+         null,
+         "4.5",
+         "34.0",
+         "21.0",
+         "121.0",
+         "7.09",
+         "4.3"
+        ],
+        [
+         "2",
+         "QB",
+         null,
+         "4.6",
+         null,
+         null,
+         null,
+         null,
+         null
+        ],
+        [
+         "3",
+         "QB",
+         null,
+         "4.95",
+         "30.0",
+         null,
+         "119.0",
+         "7.44",
+         "4.34"
+        ],
+        [
+         "4",
+         "WR",
+         null,
+         "4.78",
+         "38.0",
+         null,
+         "118.0",
+         null,
+         "4.45"
+        ]
+       ],
+       "shape": {
+        "columns": 8,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>position</th>\n",
+       "      <th>Round</th>\n",
+       "      <th>forty</th>\n",
+       "      <th>vertical</th>\n",
+       "      <th>bench_reps</th>\n",
+       "      <th>broad_jump</th>\n",
+       "      <th>three_cone</th>\n",
+       "      <th>shuttle</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>QB</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.79</td>\n",
+       "      <td>30.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>7.66</td>\n",
+       "      <td>4.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>RB</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>7.09</td>\n",
+       "      <td>4.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>QB</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.60</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>QB</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.95</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>7.44</td>\n",
+       "      <td>4.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>WR</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.78</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.45</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  position  Round  forty  vertical  bench_reps  broad_jump  three_cone  \\\n",
+       "0       QB    NaN   4.79      30.5         NaN       110.0        7.66   \n",
+       "1       RB    NaN   4.50      34.0        21.0       121.0        7.09   \n",
+       "2       QB    NaN   4.60       NaN         NaN         NaN         NaN   \n",
+       "3       QB    NaN   4.95      30.0         NaN       119.0        7.44   \n",
+       "4       WR    NaN   4.78      38.0         NaN       118.0         NaN   \n",
+       "\n",
+       "   shuttle  \n",
+       "0     4.41  \n",
+       "1     4.30  \n",
+       "2      NaN  \n",
+       "3     4.34  \n",
+       "4     4.45  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reveal first 5 rows of the dataset\n",
+    "combine_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6cf5e5b",
+   "metadata": {},
+   "source": [
+    "Interesting! Looks like in just the first few rows, there are a lot of missing values."
    ]
   }
  ],
