Update to the Data Cleaning Module

--- a/Modules/Intro to Data Cleaning and Imputation by Austin Hayes/Intro to Data Cleaning and Imputation by Austin Hayes.ipynb
+++ b/Modules/Intro to Data Cleaning and Imputation by Austin Hayes/Intro to Data Cleaning and Imputation by Austin Hayes.ipynb
@@ -8304,7 +8304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "b34ddcf1",
    "metadata": {},
    "outputs": [
@@ -8324,10 +8324,11 @@
     "# Therefore we must ensure that the other columns we are using to predict the 40-yard dash time are not missing.\n",
     "# Those columns being 'position', 'Round', 'vertical', 'bench_reps', 'broad_jump', 'three_cone', and 'shuttle'.\n",
     "missing_fortys = missing_combine_data_2[missing_combine_data_2['forty'].isna() & missing_combine_data_2[['position', 'Round', 'vertical', 'bench_reps', 'broad_jump', 'three_cone', 'shuttle']].notna().all(axis=1)]\n",
-    " #& missing_combine_data_2[cols].notna().all(axis=1)\n",
+    "\n",
     "# Use that data we just created to predict the missing 40-yard dash times\n",
     "predicted_fortys = linear_model.predict(X=missing_fortys[['vertical', 'bench_reps', 'broad_jump', 'three_cone', 'shuttle']])\n",
     "\n",
+    "# Print out the estimated values for the missing 40-yard dash times\n",
     "print(predicted_fortys)"
    ]
   },
@@ -9541,7 +9542,9 @@
    "id": "9b41a56c",
    "metadata": {},
    "source": [
-    "### 5. Use a linear regression model to predict 'bench_reps' for players who, we presume, did NOT participate in benching during the combine."
+    "### 5. Using the missing and complete datasets you created in question 2, create a linear regression model to predict shuttle times for players who, we presume, did NOT participate in the shuttle drill during the combine. Use all of the other drill times to predict the shuttle time. Then, imputate those estimated values back into the filtered missing dataset needed to achieve this process. You don't need to combine it back with the original missing dataset and complete dataset. Remember, the model cannot take any rows with missing values outside of the target variable.\n",
+    "\n",
+    "HINT: Train the model with the complete dataset."
    ]
   }
  ],
