Update to the Categorical Modeling Module

--- a/Modules/Intro to Categorical Model-Making Module by Austin Hayes/Intro to Categorical Model-Making Module by Austin Hayes.ipynb
+++ b/Modules/Intro to Categorical Model-Making Module by Austin Hayes/Intro to Categorical Model-Making Module by Austin Hayes.ipynb
@@ -112,21 +112,59 @@
     "\n",
     "If you don't have any of these librarys downloaded, you can learn about how to do so with the following links:\n",
     "\n",
-    "Pandas: \n",
+    "Pandas: https://pandas.pydata.org/docs/getting_started/install.html \n",
     "\n",
-    "Numpy: \n",
+    "Numpy: https://numpy.org/install/\n",
     "\n",
-    "Stats Models: "
+    "Sci-Kit Learn: https://scikit-learn.org/stable/install.html\n",
+    "\n",
+    "After downloading those librarys, let's import them."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "19d91ddb",
+   "id": "2f6a3b23",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "# Import the necessary librarys for the module\n",
+    "\n",
+    "# Basic Data Science Library for importing data and data manipulation\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Library for mathematical operations\n",
+    "import numpy as np\n",
+    "\n",
+    "# Import only the necessary functions from the sklearn library\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score, precision_score, recall_score, f1_score\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis, QuadraticDiscriminantAnalysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0ea4afe",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "# Categorical Modeling\n",
+    "\n",
+    "Categorical Modeling is a way of measuring a non-numeric outcome. For today, we will be predicting a binary outcome, like 'yes' or 'no', 'Champion' or 'Not Champion', etc. There are various models that can be used to achieve this but today we will go over Logistic, LDA and QDA models. Each of these models use different methodologies to achieve the same goal. Therefore, each models predictions may differ from each other, warranting comparison. This can be done using certain metrics that we will go over later in this lesson."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9e318cb",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "# Modeling Process\n",
+    "\n"
    ]
   },
   {
